; ModuleID = '/home/carl/AnghaBench/kilo/extr_kilo.c_main.c'
source_filename = "/home/carl/AnghaBench/kilo/extr_kilo.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Usage: kilo <filename>\0A\00", align 1
@STDIN_FILENO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [52 x i8] c"HELP: Ctrl-S = save | Ctrl-Q = quit | Ctrl-F = find\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 2
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @exit(i32 1) #3
  unreachable

12:                                               ; preds = %2
  %13 = call i32 (...) @initEditor()
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 1
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @editorSelectSyntaxHighlight(i8* %16)
  %18 = load i8**, i8*** %5, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i64 1
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @editorOpen(i8* %20)
  %22 = load i32, i32* @STDIN_FILENO, align 4
  %23 = call i32 @enableRawMode(i32 %22)
  %24 = call i32 @editorSetStatusMessage(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0))
  br label %25

25:                                               ; preds = %12, %25
  %26 = call i32 (...) @editorRefreshScreen()
  %27 = load i32, i32* @STDIN_FILENO, align 4
  %28 = call i32 @editorProcessKeypress(i32 %27)
  br label %25
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @initEditor(...) #1

declare dso_local i32 @editorSelectSyntaxHighlight(i8*) #1

declare dso_local i32 @editorOpen(i8*) #1

declare dso_local i32 @enableRawMode(i32) #1

declare dso_local i32 @editorSetStatusMessage(i8*) #1

declare dso_local i32 @editorRefreshScreen(...) #1

declare dso_local i32 @editorProcessKeypress(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
